entity_macros/tests/ui/derive/ent/unexpected-ent-attr.stderr
error: Unexpected ent attribute
  --> $DIR/unexpected-ent-attr.rs:11:11
   |
11 |     #[ent(something)]
   |           ^^^^^^^^^
